pkl-core/src/test/files/LanguageSnippetTests/input/errors/spreadSyntaxUnknownTypedProperty.pkl
class Person { name: String }

local personDynamic {
  name = "Barn Owl"
  age = 34
}

res1: Person = new { ...personDynamic }
